# heron

./: .gitignore  Cargo.toml  Gemfile  MANUAL.org  README  README.md  README.org  TECHNICAL-MEMO.org  heron.bash.sample  settings.sample
db/: holidays.csv
lib/: acf.R  command.rb  date.R  db_manager.R  forecaster.R
lib/visualizeEvent/: global.R  plotEvent.R  server.R  ui.R
lib/visualizeEvent/db/: special_date.csv
lib/visualizeEvent/www/: my-bootstrap.css
misc/: genholiday.rb
src/: main.rs
src/forecast/: forecaster.rs
src/google/: google_auth.rs  google_calendar.rs
