[package]
name = "heron"
version = "0.1.0"
authors = ["nakazono0424 <nakazono2019@s.okayama-u.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
polars = { version = "0.10", features = ["ndarray", "parallel", "random"]}
chrono = "*"
ndarray = "0.12.1"