[package]
name = "heron"
version = "0.1.0"
authors = ["nakazono0424 <nakazono2019@s.okayama-u.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
polars = { version = "0.10", features = ["ndarray", "parallel", "random"]}
chrono = "*"
ndarray = { version = "0.13.1", features = ["blas"]}
ndarray-glm = { version = "0.0.7", features = ["openblas-static"] }
