[package]
name = "heron"
version = "0.1.0"
authors = ["nakazono0424 <nakazono2019@s.okayama-u.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
polars = { version = "0.10", features = ["ndarray", "parallel", "random"]}
chrono = "*"
ndarray = { version = "0.13.1", features = ["blas"]}
ndarray-glm = { version = "0.0.7", features = ["openblas-static"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
jsonwebtoken = "^7"
dotenv = "0.15.0"
oauth2 = "4.0.0-alpha.1"
url = { version = "2", features = ["serde"] }
google-calendar3 = "1.0"

[dependencies.reqwest]
version = "^0.10"
default-features = false
features = ["blocking", "json", "rustls-tls"]